add human readable to fiff lib

--- a/src/lib/fifflib/CMakeLists.txt
+++ b/src/lib/fifflib/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.20)
 project(fifflib)
 
 add_library(${PROJECT_NAME} tag.cpp include/fiff/tag.hpp
-                            file.cpp include/fiff/file.hpp)
+                            file.cpp include/fiff/file.hpp
+                            idmap.cpp include/fiff/idmap.hpp)
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
