--- a/src/lib/fifflib/CMakeLists.txt
+++ b/src/lib/fifflib/CMakeLists.txt
@@ -3,7 +3,8 @@ project(fifflib)
 
 add_library(${PROJECT_NAME} tag.cpp include/fiff/tag.hpp
                             file.cpp include/fiff/file.hpp
-                            idmap.cpp include/fiff/idmap.hpp)
+                            idmap.cpp include/fiff/idmap.hpp
+                            tagloader.cpp include/fiff/tagloader.hpp)
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
