fix --tags functionality

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(corelib)
 
-add_library(${PROJECT_NAME} commandlineinput.cpp)
+add_library(${PROJECT_NAME} commandlineinput.cpp
+                            stringmanip.cpp)
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
