--- a/src/app/printfiff/CMakeLists.txt
+++ b/src/app/printfiff/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_link_libraries(${PROJECT_NAME}
-                        corelib fifflib iolib)
+                        corelib fifflib)
