--- a/src/lib/fifflib/CMakeLists.txt
+++ b/src/lib/fifflib/CMakeLists.txt
@@ -4,7 +4,7 @@ project(fifflib)
 add_library(${PROJECT_NAME} tag.cpp include/fiff/tag.hpp
                             filein.cpp include/fiff/filein.hpp
                             fileout.cpp include/fiff/fileout.hpp
-                            idmap.cpp include/fiff/idmap.hpp)
+        formatting.cpp include/fiff/formatting.hpp)
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
