Add documentation and scope enums in their own namespaces. Use unums when referring to fiff tag internals when possible.

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -3,7 +3,8 @@ project(corelib)
 
 add_library(${PROJECT_NAME} commandlineinput.cpp include/core/commandlineinput.hpp
                             stringmanip.cpp include/core/stringmanip.hpp
-                            endian.cpp include/core/endian.hpp)
+                            endian.cpp include/core/endian.hpp
+        )
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
