--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,17 @@ project(FiffFileExplorer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out/${MY_BUILD_NAME}/bin/)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/out/${MY_BUILD_NAME}/lib/)
 
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    add_compile_options(-Wall -Wextra -Wpedantic -Wabi -Wdouble-promotion -Werror -g)
 endif()
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+if(CMAKE_BUILD_TYPE MATCHES "Release")
+    add_compile_options(-Wall -Wextra -Wpedantic -Wabi -Wdouble-promotion -Werror)
+endif()
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(src)
