--- a/build
+++ b/build
@@ -15,13 +15,19 @@ else
         then
             cmake -Bout/$2/build -DCMAKE_BUILD_TYPE=$1 -DMY_BUILD_NAME=$2
             make -Cout/$2/build
+            rm -rf compile_commands.json
+            mv out/$2/build/compile_commands.json compile_commands.json
         else
             cmake -Bout/$1/build -DCMAKE_BUILD_TYPE=$1 -DMY_BUILD_NAME=$1
             make -Cout/$1/build
+            rm -rf compile_commands.json
+            mv out/$2/build/compile_commands.json compile_commands.json
         fi
     else
         cmake -Bout/Release/build -DCMAKE_BUILD_TYPE=Release -DMY_BUILD_NAME=Release
         make -Cout/Release/build
+        rm -rf compile_commands.json
+        mv out/Release/build/compile_commands.json compile_commands.json
     fi
 fi
 
