--- a/src/lib/datalib/CMakeLists.txt
+++ b/src/lib/datalib/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.20)
-project(fifflib)
+project(datalib)
 
-add_library(${PROJECT_NAME} )
+add_library(${PROJECT_NAME} parse.cpp   include/data/parse.hpp)
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(${PROJECT_NAME}
-        fifflib)
+        fifflib corelib)
 
 set(CMAKE_CXX_STANDARD 17)
