change lib names

--- a/src/app/anonymizer/CMakeLists.txt
+++ b/src/app/anonymizer/CMakeLists.txt
@@ -7,4 +7,4 @@ add_executable(${PROJECT_NAME}  main.cpp
                                 anonymizer.cpp anonymizer.hpp)
 
 target_link_libraries(${PROJECT_NAME}
-        corelib fifflib)
+        core fiff)
