--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -3,6 +3,6 @@ project(lib)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(corelib)
-add_subdirectory(fifflib)
-add_subdirectory(datalib)
+add_subdirectory(core)
+add_subdirectory(fiff)
+add_subdirectory(data)
