--- a/src/lib/data/CMakeLists.txt
+++ b/src/lib/data/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(datalib)
+project(data)
 
 add_library(${PROJECT_NAME} parse.cpp   include/data/parse.hpp)
 
@@ -7,6 +7,6 @@ target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(${PROJECT_NAME}
-        fifflib corelib)
+        fiff core)
 
 set(CMAKE_CXX_STANDARD 17)
