--- a/src/lib/fiff/CMakeLists.txt
+++ b/src/lib/fiff/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(fifflib)
+project(fiff)
 
 add_library(${PROJECT_NAME} tag.cpp include/fiff/tag.hpp
         input.cpp include/fiff/input.hpp
@@ -10,6 +10,6 @@ target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(${PROJECT_NAME}
-         corelib)
+         core)
 
 set(CMAKE_CXX_STANDARD 17)
