separate data, add overloads, add casting

--- a/src/lib/fiff/CMakeLists.txt
+++ b/src/lib/fiff/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 3.20)
 project(fiff)
 
-add_library(${PROJECT_NAME} tag.cpp include/fiff/tag.hpp
+add_library(${PROJECT_NAME}
+        include/fiff/tag.hpp
+        include/fiff/types.hpp
         input.cpp include/fiff/input.hpp
         output.cpp include/fiff/output.hpp
-        formatting.cpp include/fiff/formatting.hpp)
+        formatting.cpp include/fiff/formatting.hpp
+        data.cpp include/fiff/data.hpp
+        )
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
