--- a/test/lib/fiff/CMakeLists.txt
+++ b/test/lib/fiff/CMakeLists.txt
@@ -5,5 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Catch2 REQUIRED)
 
-add_executable(test_${PROJECT_NAME} test.cpp)
+add_executable(test_${PROJECT_NAME}
+        main.cpp
+        u_input.cpp
+        i_inputoutput.cpp)
 target_link_libraries(test_${PROJECT_NAME} PRIVATE Catch2::Catch2)
