--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Check if project builds
-        run: make
+        run: ./build
 
       - name: Get code stats
         run: |
