--- a/test/lib/fiff/CMakeLists.txt
+++ b/test/lib/fiff/CMakeLists.txt
@@ -8,5 +8,6 @@ find_package(Catch2 REQUIRED)
 add_executable(test_${PROJECT_NAME}
         main.cpp
         u_input.cpp
+        u_output.cpp
         i_inputoutput.cpp)
-target_link_libraries(test_${PROJECT_NAME} PRIVATE Catch2::Catch2)
+target_link_libraries(test_${PROJECT_NAME} PRIVATE Catch2::Catch2 fiff)
