--- a/test/lib/fiff/CMakeLists.txt
+++ b/test/lib/fiff/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(Catch2 REQUIRED)
 
-add_executable(test_${PROJECT_NAME}
+add_executable(${PROJECT_NAME}_test
         main.cpp
         u_input.cpp
         u_output.cpp
         u_tag.cpp
         i_inputoutput.cpp)
-target_link_libraries(test_${PROJECT_NAME} PRIVATE Catch2::Catch2 fiff core)
+target_link_libraries(${PROJECT_NAME}_test PRIVATE Catch2::Catch2 fiff core)
