--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/bin/)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/lib/)
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
-    add_compile_options(-Wall -Wextra -Wpedantic -Wabi -Wdouble-promotion -Werror -g)
+    add_compile_options(-Wall -Wextra -Wpedantic -Wabi -Wdouble-promotion -Werror -g -O0 -ftest-coverage -fprofile-arcs)
+    add_link_options(--coverage)
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES "Release")
