--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 project(lib)
 
-set(CMAKE_CXX_STANDARD 17)
-
 add_subdirectory(core)
 add_subdirectory(fiff)
-add_subdirectory(data)
+#add_subdirectory(data)
