--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  Test_if_it_builds:
+  Does_it_build:
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
 
@@ -29,9 +29,28 @@ jobs:
       - name: Check if project builds
         run: ./build
 
-#      - name: Run tests
-#          run: |
-#            ./out/release/run_tests
+      - name: Run tests
+          run: |
+            ./out/release/run_tests
+
+  Tests:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest ]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build project
+        run: ./build
+
+      - name: Run tests
+        run: |
+          cd ./out/Debug/test
+          chmod +x run_tests
+          ./run_tests
 
   Code_stats:
     runs-on: ubuntu-latest
