move sources/headers into same folder

--- a/src/lib/core/CMakeLists.txt
+++ b/src/lib/core/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(core)
 
-add_library(${PROJECT_NAME} commandlineinput.cpp include/core/commandlineinput.hpp
-                            stringmanip.cpp include/core/stringmanip.hpp
-                            endian.cpp include/core/endian.hpp
+add_library(${PROJECT_NAME} commandlineinput.cpp commandlineinput.hpp
+                            stringmanip.cpp stringmanip.hpp
+                            endian.cpp endian.hpp
         )
 
 target_include_directories( ${PROJECT_NAME}
-        PUBLIC ${PROJECT_SOURCE_DIR}/include)
+        PUBLIC ${PROJECT_SOURCE_DIR}/..)
