change include source structure

--- a/src/app/anonymizer/CMakeLists.txt
+++ b/src/app/anonymizer/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
 project(anonymizer)
 
-add_executable(${PROJECT_NAME}  main.cpp
-                                anonymizer.cpp anonymizer.hpp)
+set(SOURCES
+        anonymizer.hpp
+        anonymizer.cpp
+        main.cpp
+)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
         core fiff)
