--- a/src/lib/core/CMakeLists.txt
+++ b/src/lib/core/CMakeLists.txt
@@ -1,10 +1,16 @@
 cmake_minimum_required(VERSION 3.20)
 project(core)
 
-add_library(${PROJECT_NAME} commandlineinput.cpp commandlineinput.hpp
-                            stringmanip.cpp stringmanip.hpp
-                            endian.cpp endian.hpp
-        )
+set(SOURCES
+        commandlineinput.hpp
+        commandlineinput.cpp
+        stringmanip.hpp
+        stringmanip.cpp
+        endian.hpp
+        endian.cpp
+)
+
+add_library(${PROJECT_NAME} ${SOURCES})
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/..)
