--- a/src/lib/data/CMakeLists.txt
+++ b/src/lib/data/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.20)
 project(data)
 
-add_library(${PROJECT_NAME} parse.cpp parse.hpp)
+set(SOURCES
+        parse.hpp
+        parse.cpp
+)
+
+add_library(${PROJECT_NAME} ${SOURCES})
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/..)
