--- a/src/lib/fiff/CMakeLists.txt
+++ b/src/lib/fiff/CMakeLists.txt
@@ -1,14 +1,21 @@
 cmake_minimum_required(VERSION 3.20)
 project(fiff)
 
-add_library(${PROJECT_NAME}
-        tag.cpp tag.hpp
+set(SOURCES
         types.hpp
-        input.cpp input.hpp
-        output.cpp output.hpp
-        formatting.cpp formatting.hpp
-        data.cpp data.hpp
-        )
+        tag.hpp
+        tag.cpp
+        input.hpp
+        input.cpp
+        output.hpp
+        output.cpp
+        formatting.hpp
+        formatting.cpp
+        data.hpp
+        data.cpp
+)
+
+add_library(${PROJECT_NAME} ${SOURCES})
 
 target_include_directories( ${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/..)
