--- a/src/app/qfiff/CMakeLists.txt
+++ b/src/app/qfiff/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
 project(qfiff)
 
-add_executable(${PROJECT_NAME} main.cpp)
+set(SOURCES
+        main.cpp
+)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
         core fiff)
