--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build project
-        run: ./build
+        run: ./build Debug
 
       - name: Run tests
         run: |
-          cd out/Release/test
+          cd out/Debug/test
           chmod +x run_tests
           ./run_tests
 
