--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build project
-        run: ./build Debug
+        run: ./compile Debug
 
       - name: Run tests
         run: |
