--- a/src/app/qfiff/CMakeLists.txt
+++ b/src/app/qfiff/CMakeLists.txt
@@ -8,4 +8,4 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-        core fiff)
+        core fiff utils)
