--- a/src/lib/utils/CMakeLists.txt
+++ b/src/lib/utils/CMakeLists.txt
@@ -1,12 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
-project(core)
+project(utils)
 
 set(SOURCES
-        stringmanip.hpp
-        stringmanip.cpp
-        endian.hpp
-        endian.cpp
-)
+        commandlineinput.hpp
+        commandlineinput.cpp
+        )
 
 add_library(${PROJECT_NAME} ${SOURCES})
 
