get main part of fiff lib working iin c++98

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,8 @@ project(src)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/bin/)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/lib/)
 
-add_subdirectory(app)
+if(NOT (CMAKE_CXX_STANDARD EQUAL 98))
+    add_subdirectory(app)
+endif()
+
 add_subdirectory(lib)
