wall werror on src, not tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,9 @@ if(NOT DEFINED ${MY_BUILD_NAME})
 endif()
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
-    add_compile_options(-Wall -Wextra -Wpedantic -Wdouble-promotion -Werror -g -O0 -ftest-coverage -fprofile-arcs)
+    add_compile_options(-g -O0 -ftest-coverage -fprofile-arcs)
     add_link_options(--coverage)
     add_subdirectory(test)
-endif()
-
-if(CMAKE_BUILD_TYPE MATCHES "Release")
-    add_compile_options(-Wall -Wextra -Wpedantic -Wdouble-promotion -Werror)
 endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
