--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: CI
 on:
   # Triggers the workflow on push or pull request
   push:
+    branches:
+      - 'main'
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
