--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,20 @@
 cmake_minimum_required(VERSION 3.20)
 project(src)
 
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/bin/)
-set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/out/${MY_BUILD_NAME}/lib/)
+set(CMAKE_CXX_STANDARD 14)
 
 add_compile_options(-Wall -Wextra -Wpedantic -Wdouble-promotion -Werror)
+
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    add_compile_options(-g -O0 -ftest-coverage -fprofile-arcs)
+    add_link_options(--coverage)
+    add_subdirectory(test)
+endif()
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+add_subdirectory(lib)
 
 if(NOT (CMAKE_CXX_STANDARD EQUAL 98))
     add_subdirectory(app)
 endif()
-
-add_subdirectory(lib)
