--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(app)
 
+if(NOT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} STREQUAL "")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/apps/)
+endif()
+
 add_subdirectory(printfiff)
 add_subdirectory(qfiff)
 add_subdirectory(anonymizer)
