--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -3,8 +3,11 @@ project(test)
 
 include_directories(.)
 set(CMAKE_CXX_STANDARD 14)
-set(RUNTIME_OUTPUT_DIRECTORY ${RUNTIME_OUTPUT_DIRECTORY}/test)
 
-file(INSTALL run_tests DESTINATION ${RUNTIME_OUTPUT_DIRECTORY})
+if(NOT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} STREQUAL "")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests/)
+    file(INSTALL run_tests DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+endif()
+
 add_subdirectory(app)
 add_subdirectory(lib)
