--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Download core utils
+        run: brew install coreutils
+
       - name: Build project
         run: ./project --build --type Debug
 
@@ -42,4 +45,4 @@ jobs:
       - name: Get code stats
         run: |
           sudo apt-get install cloc
-          cloc src/
+          cloc src --exclude-dir=test
