start working of fiffdoctor

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -9,4 +9,5 @@ add_subdirectory(printfiff)
 add_subdirectory(qfiff)
 add_subdirectory(anonymizer)
 add_subdirectory(fiffsplice)
+add_subdirectory(fiffdoctor)
 
