Refactor into app class

--- a/src/app/fiffdoctor/CMakeLists.txt
+++ b/src/app/fiffdoctor/CMakeLists.txt
@@ -3,6 +3,8 @@ project(fiffdoctor)
 
 set(SOURCES
         main.cpp
+        docapp.cpp
+        fiffsource.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
