Add dir and files for wasm qt app

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -6,6 +6,7 @@ if(NOT ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} STREQUAL "")
 endif()
 
 add_subdirectory(printfiff)
+add_subdirectory(qtprintfiff)
 add_subdirectory(qfiff)
 add_subdirectory(anonymizer)
 add_subdirectory(fiffsplice)
