--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ project(src)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(QT_APPS 1)
+#set(QT_APPS 1)
 
 add_compile_options(-Wall -Wextra -Wpedantic -Wdouble-promotion -Werror)
 
