--- a/src/test/lib/fiff/CMakeLists.txt
+++ b/src/test/lib/fiff/CMakeLists.txt
@@ -14,4 +14,5 @@ set(SOURCES
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE fiff core)
+target_include_directories(${PROJECT_NAME} PRIVATE ./../../)
 
